kubernetes/apps/bootstrap/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bootstrap
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: pihole
